Fix css bug in safari where the keyboard overlaps the game board.

--- a/src/app.css
+++ b/src/app.css
@@ -39,7 +39,7 @@
 }
 
 .body {
-	min-height: 100vh;
+	height: 100vh;
 	margin: 0;
 	background-color: var(--primary-color);
 	background: linear-gradient(
